# android-secure-wipe

./: .gitignore  LICENSE  README.md  project_planning_and _scope.md
.github/workflows/: release.yml
desktop-app/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
desktop-app/src/: App.svelte  app.css
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/capabilities/: default.json
desktop-app/src-tauri/scripts/: full_wipe.sh  quick_wipe.sh
desktop-app/src-tauri/src/: lib.rs  main.rs
docs/: CHANGELOG.md
scripts/: full_wipe.sh  quick_wipe.sh
