[package]
name = "securewipe-wizard"
version = "1.0.0"
description = "SecureWipe Wizard - Secure Android data erasure tool"
authors = ["OnlyParams, a division of Ciphracore Systems LLC"]
license = "MIT"
repository = "https://github.com/OnlyParams/android-secure-wipe"
edition = "2021"

[lib]
name = "securewipe_wizard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
